# sc_analyzer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  sc_analyzer.sln
camera_calibration_undistort_test/: camera_calibration_undistort_test.vcxproj  main.cpp
demo_person_counter/: main.cpp
doc/html/: _background_remover_8h.html  _background_remover_8h_source.html  _body_part_extractor_8h.html  _body_part_extractor_8h_source.html  _camera_8h.html  _camera_8h_source.html  _color_extractor_8h.html  _color_extractor_8h_source.html  _color_matcher_8h.html  _color_matcher_8h_source.html  _configuration_8h.html  _configuration_8h_source.html  _direction_extractor_8h.html  _direction_extractor_8h_source.html  _feature_point_extractor_8h.html  _feature_point_extractor_8h_source.html  _feature_point_matcher_8h.html  _feature_point_matcher_8h_source.html  _frame_selector_8h.html  _frame_selector_8h_source.html  _image_8h.html  _image_8h_source.html  _j_p_g_file_loader_8h.html  _j_p_g_file_loader_8h_source.html  _likelihood_calculator_8h.html  _likelihood_calculator_8h_source.html  _m_k_v_file_loader_8h.html  _m_k_v_file_loader_8h_source.html  _object_tracker_8h.html  _object_tracker_8h_source.html  (+127 more)
imageAcquisition/: CMakeLists.txt  a.exp  a.lib  image_acquisition.h  lib_image_acquisition.cu  lib_image_acquisition.h  lib_image_acquisition_unittest.cu  lib_image_acquisition_unittest.h
opencv_test/: main.cpp  opencv_test.vcxproj
src/: image_acquisition.cu  lib_image_acquisition.cu  lib_image_acquisition.h  lib_image_acquisition_unittest.cc  lib_image_acquisition_unittest.h
(+279 files in other folders)
